-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
Test applications/jetty/Jetty.java crashes intermittently while processing a JFR sampling request. We either hit an assert or crash with SIGSEGV inside frame::sender_for_compiled_frame called from JfrVframeStream::next_vframe().
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007fb3d9690610, pid=692273, tid=692662
#
# JRE version: Java(TM) SE Runtime Environment (25.0+1) (fastdebug build 25-valhalla+1-LTS-147)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 25-valhalla+1-LTS-147, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x93f610] frame::sender_for_compiled_frame(RegisterMap*) const+0xe0
#
Current thread (0x00007fb2bc008520): JavaThread "ForkJoinPool-1-worker-13" daemon [_thread_in_vm, id=692662, stack(0x00007fb38fafc000,0x00007fb38fbfc000) (1024K)]
Stack: [0x00007fb38fafc000,0x00007fb38fbfc000], sp=0x00007fb38fbf4880, free space=994k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x93f610] frame::sender_for_compiled_frame(RegisterMap*) const+0xe0 (codeBlob.hpp:211)
V [libjvm.so+0x11b29f1] JfrVframeStream::next_vframe()+0x1191 (frame_x86.inline.hpp:423)
V [libjvm.so+0x11b0d35] JfrStackTrace::record_inner(JavaThread*, frame const&, bool, int, long) [clone .constprop.0]+0x185 (jfrStackTrace.cpp:222)
V [libjvm.so+0x11b1307] JfrStackTrace::record(JavaThread*, frame const&, bool, JfrSampleRequest const&)+0x57 (jfrStackTrace.cpp:177)
V [libjvm.so+0x11d9691] drain_enqueued_requests(TimeInstant<CounterRepresentation, FastUnorderedElapsedCounterSource> const&, JfrThreadLocal*, JavaThread*, Thread*)+0x2d1 (jfrThreadSampling.cpp:281)
V [libjvm.so+0x11db7aa] JfrThreadSampling::process_sample_request(JavaThread*)+0x15a (jfrThreadSampling.cpp:396)
V [libjvm.so+0x196e24e] SafepointMechanism::process(JavaThread*, bool, bool)+0x4e (jfr.inline.hpp:40)
V [libjvm.so+0x1969392] ThreadSafepointState::handle_polling_page_exception()+0xcd2 (safepointMechanism.inline.hpp:90)
V [libjvm.so+0x1969e1b] SafepointSynchronize::handle_polling_page_exception(JavaThread*)+0xab (safepoint.cpp:617)
v ~SafepointBlob 0x00007fb3c3d3f0db
J 10939 c2 org.jvnet.hk2.internal.ServiceLocatorImpl.internalGetInjecteeDescriptor(Lorg/glassfish/hk2/api/Injectee;Z)Lorg/glassfish/hk2/api/ActiveDescriptor; (220 bytes) @ 0x00007fb3c466f500 [0x00007fb3c466e8a0+0x0000000000000c60]
J 5050 c2 org.jvnet.hk2.internal.ClazzCreator.resolve(Ljava/util/Map;Lorg/glassfish/hk2/api/InjectionResolver;Lorg/glassfish/hk2/api/Injectee;Lorg/glassfish/hk2/api/ServiceHandle;Lorg/jvnet/hk2/internal/Collector;)V (64 bytes) @ 0x00007fb3c46ea43c [0x00007fb3c46ea3a0+0x000000000000009c]
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007fb3d9690610, pid=692273, tid=692662
#
# JRE version: Java(TM) SE Runtime Environment (25.0+1) (fastdebug build 25-valhalla+1-LTS-147)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 25-valhalla+1-LTS-147, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x93f610] frame::sender_for_compiled_frame(RegisterMap*) const+0xe0
#
Current thread (0x00007fb2bc008520): JavaThread "ForkJoinPool-1-worker-13" daemon [_thread_in_vm, id=692662, stack(0x00007fb38fafc000,0x00007fb38fbfc000) (1024K)]
Stack: [0x00007fb38fafc000,0x00007fb38fbfc000], sp=0x00007fb38fbf4880, free space=994k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x93f610] frame::sender_for_compiled_frame(RegisterMap*) const+0xe0 (codeBlob.hpp:211)
V [libjvm.so+0x11b29f1] JfrVframeStream::next_vframe()+0x1191 (frame_x86.inline.hpp:423)
V [libjvm.so+0x11b0d35] JfrStackTrace::record_inner(JavaThread*, frame const&, bool, int, long) [clone .constprop.0]+0x185 (jfrStackTrace.cpp:222)
V [libjvm.so+0x11b1307] JfrStackTrace::record(JavaThread*, frame const&, bool, JfrSampleRequest const&)+0x57 (jfrStackTrace.cpp:177)
V [libjvm.so+0x11d9691] drain_enqueued_requests(TimeInstant<CounterRepresentation, FastUnorderedElapsedCounterSource> const&, JfrThreadLocal*, JavaThread*, Thread*)+0x2d1 (jfrThreadSampling.cpp:281)
V [libjvm.so+0x11db7aa] JfrThreadSampling::process_sample_request(JavaThread*)+0x15a (jfrThreadSampling.cpp:396)
V [libjvm.so+0x196e24e] SafepointMechanism::process(JavaThread*, bool, bool)+0x4e (jfr.inline.hpp:40)
V [libjvm.so+0x1969392] ThreadSafepointState::handle_polling_page_exception()+0xcd2 (safepointMechanism.inline.hpp:90)
V [libjvm.so+0x1969e1b] SafepointSynchronize::handle_polling_page_exception(JavaThread*)+0xab (safepoint.cpp:617)
v ~SafepointBlob 0x00007fb3c3d3f0db
J 10939 c2 org.jvnet.hk2.internal.ServiceLocatorImpl.internalGetInjecteeDescriptor(Lorg/glassfish/hk2/api/Injectee;Z)Lorg/glassfish/hk2/api/ActiveDescriptor; (220 bytes) @ 0x00007fb3c466f500 [0x00007fb3c466e8a0+0x0000000000000c60]
J 5050 c2 org.jvnet.hk2.internal.ClazzCreator.resolve(Ljava/util/Map;Lorg/glassfish/hk2/api/InjectionResolver;Lorg/glassfish/hk2/api/Injectee;Lorg/glassfish/hk2/api/ServiceHandle;Lorg/jvnet/hk2/internal/Collector;)V (64 bytes) @ 0x00007fb3c46ea43c [0x00007fb3c46ea3a0+0x000000000000009c]
- relates to
-
JDK-8378771 [lworld] JFR Cooperative Sampling support for needs_stack_repair methods and frames
-
- In Progress
-
- links to
-
Commit(lworld)
openjdk/valhalla/52e1a19d
-
Review(lworld)
openjdk/valhalla/1610