8368099: [lworld] Crash in frame::sender_for_compiled_frame while processing JFR sampling request

Reviewed-by: mgronlun